--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="./css/mobile.css" />
         <link rel="stylesheet" href="./css/desktop.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:title" content="Scarlet Victoria" />
+        <meta property="og:description" content="Software Engineer, content creator and open source enthusiast." />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://scarletquasar.github.io/personal-blog/" />
+        <meta property="og:image" content="https://img.icons8.com/ios/50/FFFFFF/lambda.png" />
         <title>Scarlet Victoria</title>
     </head>
     <body>
