--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div id="links">
           <a href='./posts.html'>posts</a>
           <a target='_blank' href='https://github.com/scarletquasar'>github</a>
+          <a target='_blank' href='https://dev.to/scarlet'>dev.to</a>
         </div>
         <main>
         
