--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./css/mobile.css" />
         <link rel="stylesheet" href="./css/desktop.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Posts - Scarlet Victoria</title>
+        <title>Posts - Scarlet Victoria Rose</title>
     </head>
     <body>
         <main>
