--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://scarletquasar.github.io/personal-blog/" />
         <meta property="og:image" content="https://img.icons8.com/ios/50/FFFFFF/lambda.png" />
-        <title>Scarlet Victoria</title>
+        <title>Scarlet Victoria Rose</title>
     </head>
     <body>
         <nav>
             <img width="45" height="45" src="https://img.icons8.com/ios/50/FFFFFF/lambda.png" alt="lambda"/>
-            <h1><a href='./index.html'>Scarlet Victoria</a></h1>
+            <h1><a href='./index.html'>Scarlet Victoria Rose</a></h1>
         </nav>
         <div id="links">
           <a href='./posts.html'>posts</a>
