--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-Soon
-<!-- <script src="./scripts/startup.js"></script> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./styles/fonts.css" rel="stylesheet">
+    <link href="./styles/global.css" rel="stylesheet">
+    <title></title>
+</head>
+<body>
+    <script src="./scripts/components/navButtons.js"></script>
+    <script src="./scripts/components/title.js"></script>
+    <script src="./scripts/components/navbar.js"></script>
+    <script src="./scripts/startup.js"></script>
+</body>
+</html>
