testing posts and languages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title></title>
 </head>
 <body>
+    <script src="./scripts/components/postItem.js"></script>
     <script src="./scripts/components/viewer.js"></script>
     <script src="./scripts/components/navButtons.js"></script>
     <script src="./scripts/components/title.js"></script>
