--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title></title>
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="./scripts/functions/loadPosts.js"></script>
     <script src="./scripts/components/viewerSearch.js"></script>
     <script src="./scripts/components/postItem.js"></script>
     <script src="./scripts/components/viewer.js"></script>
