tricky search stuff idk

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="./scripts/functions/searchForPost.js"></script>
     <script src="./scripts/functions/loadPosts.js"></script>
     <script src="./scripts/components/viewerSearch.js"></script>
     <script src="./scripts/components/postItem.js"></script>
