--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="./scripts/libraries/highlight.min.js"></script>
     <script src="./scripts/functions/searchForPost.js"></script>
     <script src="./scripts/functions/loadPosts.js"></script>
     <script src="./scripts/components/viewerSearch.js"></script>
