--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link href="./styles/fonts.css" rel="stylesheet">
     <link href="./styles/global.css" rel="stylesheet">
     <title></title>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Scarlet Rose">
+    <meta property="og:description" content="Scarlet Rose's Blog">
+    <meta property="og:url" content="https://scarletrose.xyz">
+    <meta property="og:image" content="https://lol-skin.weblog.vc/img/wallpaper/tiles/Poppy_0.jpg">
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
