--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./styles/highlight.css" rel="stylesheet">
     <link href="./styles/fonts.css" rel="stylesheet">
     <link href="./styles/global.css" rel="stylesheet">
-    <title></title>
+    <title>Scarlet Rose</title>
     <meta property="og:type" content="website">
     <meta property="og:title" content="Scarlet Rose">
     <meta property="og:description" content="Scarlet Rose's Blog">
