--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="./styles/highlight.css" rel="stylesheet">
     <link href="./styles/fonts.css" rel="stylesheet">
     <link href="./styles/global.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./favicon.png"/>
     <title>Scarlet Rose</title>
     <meta property="og:type" content="website">
     <meta property="og:title" content="Scarlet Rose">
