update og image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Scarlet Rose">
     <meta property="og:description" content="Scarlet Rose's Blog">
     <meta property="og:url" content="https://scarletrose.xyz">
-    <meta property="og:image" content="https://lol-skin.weblog.vc/img/wallpaper/tiles/Poppy_0.jpg">
+    <meta property="og:image" content="https://scarletrose.xyz/assets/sakura-anime.gif">
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
